--- a/controle_series_symfony/config/packages/cache.yaml
+++ b/controle_series_symfony/config/packages/cache.yaml
@@ -1,8 +1,10 @@
+# É aqui que você configura o funcionamento do cache.
 framework:
     cache:
         # Unique name of your app: used to compute stable namespaces for cache keys.
         #prefix_seed: your_vendor_name/app_name
 
+        # O cache "app" armazena os dados no sistema de arquivos por padrão.
         # The "app" cache stores to the filesystem by default.
         # The data in this cache should persist between deploys.
         # Other options include:
