Salvando no banco

--- a/controle_series_symfony/config/packages/doctrine.yaml
+++ b/controle_series_symfony/config/packages/doctrine.yaml
@@ -19,7 +19,7 @@ doctrine:
         #     type: pool            # O cache fica dentro de pool.
         #     pool: cache.app       # O pool cache.app vai guardar os dados ao invés do pool cache.system.
         second_level_cache:
-            enabled: true # Habilitar o Cache de Segundo Nível (SLC).
+            enabled: false # Habilitar o Cache de Segundo Nível (SLC).
             region_cache_driver:    # Mesma coisa que o metadata_cache_driver, query_cache_driver e result_cache_driver.
                 type: pool          # O cache fica dentro de pool.
                 pool: cache.app     # O pool cache.app vai guardar os dados ao invés do pool cache.system.
